--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -26,15 +26,6 @@
                                 <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
                                                         [is_required_circle]="false"
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">Name of Officer</mat-label>
-                                        <input matInput formControlName="NameOfOfficer" autocomplete="off"
-                                               readonly="readonly"/>
-                                    </mat-form-field>
-                                </div>
-
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">P.P.NO</mat-label>
@@ -135,7 +126,7 @@
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">No. of new borrowers contacted</mat-label>
-                                            <input matInput formControlName="NoOfNewBorrowersContacted"
+                                            <input matInput formControlName="DisbNoOfNewBorrowerContacted"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -146,7 +137,7 @@
                                             <mat-label class="customMatLabel">No. of borrowers of Roll-over cases
                                                 contacted
                                             </mat-label>
-                                            <input matInput formControlName="NoOfBorrowersRollover" autocomplete="off"/>
+                                            <input matInput formControlName="DisbBorrowerRollOverCasedContacted" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -161,74 +152,18 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of Defaulters contacted</mat-label>
-                                            <input matInput formControlName="NoOfDefaultersContacted"
-                                                   autocomplete="off"/>
-                                        </mat-form-field>
-                                    </div>
-
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
-                                         style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                             <mat-label class="customMatLabel">Amount recovered with L.C. No.</mat-label>
-                                            <input matInput formControlName="AmountRecoveredWithLcno"
+                                            <input matInput formControlName="RecAmountRecoveredWithLCNo"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
                                 </div>
 
                             </div>
-
-                            <div class="col-lg-12">
-                                <div class="flex" style="flex-wrap: wrap;">
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
-                                         style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of utilizations checked as per quota
-                                            </mat-label>
-                                            <input matInput formControlName="NoOfUtilizationsCheckedPerQuota"
-                                                   autocomplete="off"/>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
-
-                            </div>
-
                             <div class="sub-heading">Transfer of Technology
                             </div>
-
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
-                                         style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Progressive Farmers contacted</mat-label>
-                                            <input matInput formControlName="ProgressiveFarmersContacted"
-                                                   autocomplete="off"/>
-                                        </mat-form-field>
-                                    </div>
-
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
-                                         style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of farms visited</mat-label>
-                                            <input matInput formControlName="NoOfFarmsVisited" autocomplete="off"/>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="col-lg-12">
-                                <div class="flex" style="flex-wrap: wrap;">
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
-                                         style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Any other work done</mat-label>
-                                            <input matInput formControlName="AnyOtherWorkDone" autocomplete="off"/>
-                                        </mat-form-field>
-                                    </div>
-
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
