--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -322,7 +322,7 @@
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
                                 <button class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>{{btnText}}</button>
-                                <button mat-raised-button class="mr-2" color="primary" (click)="SubmitTourDiary()">
+                                <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
