--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -517,6 +517,7 @@
             </button>
         </div>
     </div>
+    {{TourDiaryList|json}}
     <div class="mt-2 row">
         <div class="col-lg-12 p-0 ist-table overflow-auto shadow-xs rounded-sm mt-3">
             <table class="table mb-0">
