search tour diary

--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -566,7 +566,7 @@
                                 edit
                             </mat-icon>
                         </button>
-                        <button mat-icon-button (click)="changeStatus(mcoDiary,'C')">
+                        <button mat-icon-button (click)="delete(mcoDiary,'C')">
                             <mat-icon class="text-red-500">
                                 delete_forever
                             </mat-icon>
