Zone Branch Circle Reverted

--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -137,7 +137,8 @@
                                             <mat-label class="customMatLabel">No. of borrowers of Roll-over cases
                                                 contacted
                                             </mat-label>
-                                            <input matInput formControlName="DisbBorrowerRollOverCasedContacted" autocomplete="off"/>
+                                            <input matInput formControlName="DisbBorrowerRollOverCasedContacted"
+                                                   autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -220,7 +221,6 @@
                                     <th class="border-r border-gray-400">No. of new borrowers contacted</th>
                                     <th class="border-r border-gray-400">No. of borrowers of Roll-over cases contacted
                                     </th>
-                                    <th class="border-r border-gray-400">No. of Defaulters contacted</th>
                                     <th class="border-r border-gray-400">Amount recovered with L.C. No.</th>
                                 </tr>
                                 </thead>
