--- a/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
+++ b/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
@@ -4,7 +4,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Tour Plan List</div>
+            <div class="heading">Tour Diary List</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
@@ -21,11 +21,11 @@
 
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
-            <div [formGroup]="TourPlan">
+            <div [formGroup]="TourDiary">
 
 
                 <div class="flex mt-1" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="TourPlan" [should_hide_fields]="true"
+                    <app-zone-branch-circle [form]="TourDiary" [should_hide_fields]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
@@ -56,12 +56,12 @@
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label>Select Tour Plan Status <strong class="matMandatory">*</strong></mat-label>
+                                <mat-label>Select Tour Diary Status <strong class="matMandatory">*</strong></mat-label>
                                 <mat-select formControlName="Status">
                                     <mat-option value="">
                                         Select
                                     </mat-option>
-                                    <mat-option *ngFor="let obj of tourPlanStatusLov?.LOVs" [value]="obj.Value">
+                                    <mat-option *ngFor="let obj of tourDiaryStatusLov?.LOVs" [value]="obj.Value">
                                         {{obj.Name}}
                                     </mat-option>
                                 </mat-select>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                            <button (click)="SearchTourPlan(true)" type="button"
+                            <button (click)="SearchTourDiary(true)" type="button"
                                     class=" mt-2 mat-raised-button mat-button-base bg-gray-500 kt-login__btn-primary btn-block mat-primary">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
@@ -93,7 +93,7 @@
             <!--           table -->
 
             <div class="custom-accordion   rounded-lg my-2 bg-white shadow-sm border"
-                 *ngFor="let activity of TourPlans | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} ; let i = index;">
+                 *ngFor="let activity of TourDiarys | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} ; let i = index;">
                 <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
                      style="cursor: pointer">
                     <div class=" self-center ml-8">
@@ -128,7 +128,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr *ngFor="let child of activity.TourPlans">
+                        <tr *ngFor="let child of activity.TourDiarys">
                             <td style="width: 20%">{{child?.ZoneName ? child?.ZoneName : "-"}}</td>
                             <td style="width: 20%">{{child?.BranchName ? child?.BranchName : "-"}}</td>
                             <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
@@ -143,8 +143,8 @@
 
                             <td style="width: 20%">
                                 <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child)"
-                                        (click)="editTourPlan(child)">
-                                    <mat-icon style="margin-left: 5px;" title="Edit Tour Plan">edit</mat-icon>
+                                        (click)="editTourDiary(child)">
+                                    <mat-icon style="margin-left: 5px;" title="Edit Tour Diary">edit</mat-icon>
                                 </button>
                             </td>
                         </tr>
