--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -30,6 +30,9 @@
 
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
+                                    <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
+                                                            [is_required_circle]="false"
+                                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -43,15 +46,12 @@
                                             <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Month</mat-label>
-                                            <input matInput formControlName="Month" autocomplete="off" readonly="readonly"/>
-                                        </mat-form-field>
-                                    </div>
-
-
-
+<!--                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+<!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
+<!--                                            <mat-label class="customMatLabel">Month</mat-label>-->
+<!--                                            <input matInput formControlName="Month" autocomplete="off" readonly="readonly"/>-->
+<!--                                        </mat-form-field>-->
+<!--                                    </div>-->
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
 <!--                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
@@ -92,9 +92,7 @@
 <!--                                            <input matInput formControlName="Zone" autocomplete="off" readonly="readonly"/>-->
 <!--                                        </mat-form-field>-->
 <!--                                    </div>-->
-                                    <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
-                                                            [is_required_circle]="false"
-                                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+
                                 </div>
 
                                 <div class="sub-heading">Departure From
